fixed overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ button {
 .tophalf-wrapper {
     overflow: hidden;
     /* border: 1px black solid; */
-    height: 140vh;
+    min-height: 140vh;
 }
 
 .bottomhalf-wrapper {
